--- a/project/css/contact.css
+++ b/project/css/contact.css
@@ -44,90 +44,151 @@ body{
     .text nav a:hover{
         color:orange;
     }
-header{
-    width: 100%;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+    /* header part start */
+    /* header{
+        width: 100%;
+        position: absolute;
+        top: 0;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        transition: all 2s linear;
+
+        
+    }
+    header .logo{
+        padding: 5px 25px;
+        display: flex;
+        justify-content: space-evenly;
+    }
+   
+    header span{
+        position: absolute;
+        right: 6px;
+        border: 5px solid grey;
+        border-radius: 5px;
+        top: 1px;
+        margin: 10px;
+        padding: 5px 10px;
+        
+    }
+    #menu{
+        padding-top: 10px;
+    }
     
-}
-header .logo{
-    padding: 5px 25px;
-}
+    header nav a{
+        text-decoration: none;
+        color: white;
+        text-transform: capitalize;
+        padding: 5px 25px;
+    
+        font-size: 20px;
+        text-transform: uppercase;
+        font-family: Arial, Helvetica, sans-serif;
+    }
+    header nav a:hover{
+        color:orange;
+    }
+    
+    .clr{
+        color: white;
+    }
+    .nw{
+        width: 100%;
+        position: fixed;
+        top: 0;
+        background: black;
+        /* color: red !important; */
+        /* z-index: 45;
+    }
+    
+    span{
+        color: white;
+        font-size: 25px;
+        padding: 10px;
+        display: none;
+    }
+    
+    .hide{
+        display: block;
+       } */
+    /* header part end */
+    
+    /* footer css start */
+    /* footer nav{
+        width: 90%;
+        font-size: 20px;
+        text-align: center;
+        padding-top: 20px;
+        }
+        nav a{
+        padding: 20px;
+        text-decoration: none;
+        color: #6a6d73;
+        }
+        
+        footer{
+        margin-top: 20px;
+        width: 100%;
+        /* height: 40vh; */
+        /* display: flex;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+        background-color: black;
+        }
+        footer .frm{
+        width: 30%;
+        color: white;
+        padding-top: 20px;
+        
+        }
+        .frm h2{
+            color: grey;
+        }
+        .frm input{
+        width: 80%;
+        padding: 10px;
+        border: 5px solid sandybrown;
+        text-align: center;
+        font-size: 15px;
+        margin-top: 10px;
+        
+        }
+        .frm button{
+        width: 30%;
+        padding: 10px;
+        margin-top: 5px;
+        border: 2px solid sandybrown;
+        }
+        .social-icon{
+        width: 25%;
+        color: #6a6d73;
+        font-size: 20px; 
+        padding-top: 20px;
+        }
+        .social-icon a{
+        padding: 8px;
+        }
+        
+        .tt{
+        width: 30%;
+        color: #6a6d73;
+        font-size: 20px;
+        padding-top: 20px;
+        }
+        
+        .arrow{
+            width: 5%;
+        }
+        .arrow i{
+            width: 100%;
+            color: black;
+            font-size: 35px;
+          
+        }  */ 
+        /* footer css end */
 
-header nav a{
-    text-decoration: none;
-    color: white;
-    text-transform: capitalize;
-    padding: 5px 25px;
-
-    font-size: 20px;
-    text-transform: uppercase;
-    font-family: Arial, Helvetica, sans-serif;
-}
-header nav a:hover{
-    color:orange;
-}
-
-footer nav{
-width: 90%;
-font-size: 20px;
-text-align: center;
-padding-top: 20px;
-}
-nav a{
-padding: 20px;
-text-decoration: none;
-color: #6a6d73;
-}
-
-footer{
-margin-top: 20px;
-width: 100%;
-height: 40vh;
-display: flex;
-justify-content: space-evenly;
-flex-wrap: wrap;
-background-color: black;
-}
-footer .frm{
-width: 30%;
-color: white;
-padding-top: 20px;
-
-}
-.frm input{
-width: 80%;
-padding: 10px;
-border: 5px solid sandybrown;
-text-align: center;
-font-size: 15px;
-margin-top: 10px;
-}
-.frm button{
-width: 30%;
-padding: 10px;
-margin-top: 5px;
-border: 2px solid sandybrown;
-}
-.social-icon{
-width: 25%;
-color: #6a6d73;
-font-size: 20px; 
-padding-top: 20px;
-}
-.social-icon a{
-padding: 8px;
-}
-
-.tt{
-width: 30%;
-color: #6a6d73;
-font-size: 20px;
-padding-top: 20px;
-}
 .main-box{
 width: 100%;
 }
@@ -139,13 +200,16 @@ height: 60vh;
 color: aqua;
 }
 
+
+
+
 .contact{
     width: 90%;
     height: inherit;
-    margin: 8% auto;
+    margin: 10% auto;
     text-align: center;
-    padding: 20px ;
-text-align: center;
+    /* padding: 20px ; */
+align-items: center;
 }
 .contact .contact-text{
     width: 90%;
@@ -170,6 +234,7 @@ text-align: center;
     justify-content: space-around;
     align-items: center;
     padding-top: 10px;
+    flex-wrap: wrap;
 }
 .qery .booking h5{
     font-family:'Courier New', Courier, monospace ;
@@ -219,51 +284,102 @@ text-align: center;
     color: sandybrown;
 }
 .contact-form{
-    width: 90%;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 10% auto;
+    flex-wrap: wrap;
+    
 }
 .contact-form .ifrme-lft{
-    width: 45%;
+    width: 48%;
 }
 .contact-form .formdt{
-    width: 45%;
-    height: 50vh;
-    margin: 10px auto;
-    border: 2px solid black;
+    width: 48%;
+    margin: 20px auto;
+    
    
 }
 
 .formdt .formtxt{
-    width: 90%;
+    width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+    margin: 20px auto;
+    }
+    .formtxt .form-lgt{
+        width: 48%;
+    }
+.formtxt .form-lgt input{
+    width: 100%;
+    padding: 12px;
+}
+.formdt .formtxt2, .formtxt3, .formtxt4 {
     margin: 20px auto;
 }
-.formtxt .form-lgt input{
-    width: 90%;
-    padding: 6px;
-}
 .formtxt .form-rgt input{
-    width: 90%;
-    padding: 6px;
+    width: 100%;
+    padding: 12px;
+}
+.formtxt .form-rgt{
+    width: 48%;
+    
 }
 .formtxt2 input{
-    width: 85%;
-    margin-top: 20px;
-    padding: 10px;
-    margin-bottom: 20px;
-}
-.formtxt3 textarea{
-    width: 85%;
-    margin-top: 20px;
-    padding: 10px;
-    margin-bottom: 20px;
+    width: 100%;
+    padding: 15px;
+   
 }
 
+.formtxt3 textarea{
+    width: 100%;
+    
+    padding: 25px;
+   
+}
+.formtxt4 button{
+    width: 100%;
+    
+    padding: 15px;
+    background-color: orange;
+    border: none;
+    color: antiquewhite;
+}
+
+.formtxt4 button:hover{
+    border-color: rgb(191, 128, 11);
+}
+
+
+
+
 @media screen and (max-width:780px){
+
+    .contact{
+        width: 75%;
+        text-align: center;
+        flex-direction: row;
+    }
+    .contact-form{
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-wrap: wrap;
+        
+        
+    }
+    
+    .contact-form .ifrme-lft{
+        width: 100%;
+       
+    }
+    .contact-form .formdt{
+        width: 100%;
+    }
+   
+}
+@media screen and (max-width:560px){
 header{
       flex-direction: column;
       text-align: center;
@@ -272,59 +388,39 @@ header{
     .contact{
         width: 75%;
         text-align: center;
+        flex-direction: row;
     }
-    footer{
-    flex-direction: column;
-    width: 90%;
-    align-items: center;
-    
-   }
-   footer nav{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .social-icon{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .tt{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-}
-@media screen and (max-width:560px){
-header{
-      flex-direction: column;
-      text-align: center;
-
+    .contact-form{
+        width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        flex-wrap: wrap;
+        text-align: center;
+        
     }
-    .about{
-        width: 85%;
+    .contact .qery{
+        width: 100%;
         text-align: center;
     }
+    .contact  .contact-text{
+        width: 100%;
+    }
+    .contact-form .ifrme-lft{
+        width: 100%;
+       
+    }
+    .contact-form .formdt{
+        width: 100%;
+    }
 
-    footer{
-    flex-direction: column;
-    width: 90%;
-    align-items: center;
-    
-   }
-   footer nav{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .social-icon{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .tt{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
+   
 }
+
+/* .clr{
+    color: white;
+} */
+
+/* header nav a{
+    color: white;
+} */
