--- a/project/css/aboutstyle.css
+++ b/project/css/aboutstyle.css
@@ -44,90 +44,9 @@ body{
     .text nav a:hover{
         color:orange;
     }
-header{
-    width: 100%;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+
+
     
-}
-header .logo{
-    padding: 5px 25px;
-}
-
-header nav a{
-    text-decoration: none;
-    color: white;
-    text-transform: capitalize;
-    padding: 5px 25px;
-
-    font-size: 20px;
-    text-transform: uppercase;
-    font-family: Arial, Helvetica, sans-serif;
-}
-header nav a:hover{
-    color:orange;
-}
-
-footer nav{
-width: 90%;
-font-size: 20px;
-text-align: center;
-padding-top: 20px;
-}
-nav a{
-padding: 20px;
-text-decoration: none;
-color: #6a6d73;
-}
-
-footer{
-margin-top: 20px;
-width: 100%;
-height: 40vh;
-display: flex;
-justify-content: space-evenly;
-flex-wrap: wrap;
-background-color: black;
-}
-footer .frm{
-width: 30%;
-color: white;
-padding-top: 20px;
-
-}
-.frm input{
-width: 80%;
-padding: 10px;
-border: 5px solid sandybrown;
-text-align: center;
-font-size: 15px;
-margin-top: 10px;
-}
-.frm button{
-width: 30%;
-padding: 10px;
-margin-top: 5px;
-border: 2px solid sandybrown;
-}
-.social-icon{
-width: 25%;
-color: #6a6d73;
-font-size: 20px; 
-padding-top: 20px;
-}
-.social-icon a{
-padding: 8px;
-}
-
-.tt{
-width: 30%;
-color: #6a6d73;
-font-size: 20px;
-padding-top: 20px;
-}
 .main-box{
 width: 100%;
 }
@@ -147,6 +66,7 @@ padding: 20px ;
 border-radius: 20px;
 display: flex;
 justify-content: space-evenly;
+flex-wrap: wrap;
 }
 .about .about-lft{
 width: 50%;
@@ -229,6 +149,7 @@ width: 90%;
 display: flex;
 justify-content: space-evenly;
 margin-top: 20px;
+flex-wrap: wrap;
 }
 .ex .ex-lf{
     width: 45%;
@@ -241,6 +162,7 @@ margin-top: 20px;
     justify-content: space-evenly;
     border-left: 6px solid sandybrown;
     align-items: center;
+    flex-wrap: wrap;
    
 }
 
@@ -298,67 +220,50 @@ color: white;
 }
 
 @media screen and (max-width:780px){
-header{
-      flex-direction: column;
-      text-align: center;
-
-    }
-    .about{
-        width: 75%;
-        text-align: center;
-    }
-    footer{
-    flex-direction: column;
-    width: 90%;
+.about{
+    width: 85%;
+    flex-direction: row;
     align-items: center;
-    
-   }
-   footer nav{
+}
+ .about .about-lft{
     width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .social-icon{
+ }  
+ .about .about-rgt{
     width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .tt{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
+    margin-top: 40px;
+ } 
 }
 @media screen and (max-width:560px){
-header{
-      flex-direction: column;
-      text-align: center;
-
-    }
     .about{
         width: 85%;
-        text-align: center;
+        flex-direction: row;
+        align-items: center;
     }
+     .about .about-lft{
+        width: 100%;
+     }  
+     .about .about-rgt{
+        width: 100%;
+        margin-top: 40px;
+     } 
+     
 
-    footer{
-    flex-direction: column;
-    width: 90%;
-    align-items: center;
-    
-   }
-   footer nav{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .social-icon{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .tt{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
+     .about .about-rgt .ex{
+        width: 90%;
+        flex-direction: row;
+        align-items: center;
+     }
+     .about .about-rgt .ex .ex-lf{
+width: 100%;
+text-align: center;
+     }
+     .about .about-rgt .ex .ex-rgt{
+        width: 100%;
+        text-align: center;
+        margin-top: 20px;
+             }
+             .about .btn{
+                width: 80%;
+                align-items: center;
+             }
 }
