--- a/project/css/food.css
+++ b/project/css/food.css
@@ -20,6 +20,7 @@ body{
     width: 100%;
     background-color: rgba(0,0,0,0.6);
     position: absolute;
+   
 }
 
 .banner .text{
@@ -44,90 +45,7 @@ body{
     .text nav a:hover{
         color:orange;
     }
-header{
-    width: 100%;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-}
-header .logo{
-    padding: 5px 25px;
-}
 
-header nav a{
-    text-decoration: none;
-    color: white;
-    text-transform: capitalize;
-    padding: 5px 25px;
-
-    font-size: 20px;
-    text-transform: uppercase;
-    font-family: Arial, Helvetica, sans-serif;
-}
-header nav a:hover{
-    color:orange;
-}
-
-footer nav{
-width: 90%;
-font-size: 20px;
-text-align: center;
-padding-top: 20px;
-}
-nav a{
-padding: 20px;
-text-decoration: none;
-color: #6a6d73;
-}
-
-footer{
-margin-top: 20px;
-width: 100%;
-height: 40vh;
-display: flex;
-justify-content: space-evenly;
-flex-wrap: wrap;
-background-color: black;
-}
-footer .frm{
-width: 30%;
-color: white;
-padding-top: 20px;
-
-}
-.frm input{
-width: 80%;
-padding: 10px;
-border: 5px solid sandybrown;
-text-align: center;
-font-size: 15px;
-margin-top: 10px;
-}
-.frm button{
-width: 30%;
-padding: 10px;
-margin-top: 5px;
-border: 2px solid sandybrown;
-}
-.social-icon{
-width: 25%;
-color: #6a6d73;
-font-size: 20px; 
-padding-top: 20px;
-}
-.social-icon a{
-padding: 8px;
-}
-
-.tt{
-width: 30%;
-color: #6a6d73;
-font-size: 20px;
-padding-top: 20px;
-}
 .main-box{
 width: 100%;
 }
@@ -138,227 +56,240 @@ width: 100%;
 height: 60vh;
 color: aqua;
 }
-.about{
+.menu{
 width: 90%;
-height: 100%;
 height: inherit;
-margin: 8% auto;
+margin: 2% auto;
 padding: 20px ;
-border-radius: 20px;
-display: flex;
-justify-content: space-evenly;
+text-align: center;
 }
-.about .about-lft{
-width: 50%;
-
-}
-.about .about-lft .image{
-width: 90%;
-display: flex;
-justify-content: space-around; 
-flex-wrap: wrap;
-
-}
-.about-lft .image1{
-width: 50%;
-padding-bottom: 20px;
-transition: all .1sec linear;
-}
-.about-lft .image1:hover{
-    transform: rotate(5deg);
-}
-.image1 img{
-width: 100%;
-}
-.about-lft .image2{
-width: 45%;
-transition: all .1sec linear;
-}
-.about-lft .image2:hover{
-    transform: rotate(5deg);
-}
-.image2 img{
-width: 100%;
-}
-.about-lft .image3{
-width: 45%;
-transition: all .1sec linear;
-}
-.about-lft .image3:hover{
-    transform: rotate(5deg);
-}
-.image3 img{
-width: 100%;
-}
-
-.about-lft .image4{
-width: 50%;
-transition: all .1sec linear;
-}
-.about-lft .image4:hover{
-    transform: rotate(5deg);
-}
-.image4 img{
-width: 100%;
-}
-.about .about-rgt{
-width: 45%;
-
-}
-.about .about-rgt h1{
-    font-size: 36px;
-    color: black;
-    }
-    .about .about-rgt i{
-        color: sandybrown;
-        font-size: 40px;
-    }
-.about .about-rgt h5{
-font-size: 25px;
-padding: 10px;
-color: sandybrown;
-}
-.about .about-rgt p{
-font-size: 18px;
-padding: 10px;
-color: grey;
-}
-
-.about .about-rgt .ex{
-width: 90%;
-display: flex;
-justify-content: space-evenly;
-margin-top: 20px;
-}
-.ex .ex-lf{
-    width: 45%;
-   
-    
-}
-.ex .ex-lf .txt-dsl{
+.menu .menu-text{
     width: 90%;
-    display: flex;
-    justify-content: space-evenly;
-    border-left: 6px solid sandybrown;
-    align-items: center;
-   
 }
-
-.txt-dsl .ex-txt-lft h1{
-   font-size: 50px;
-    color: sandybrown;
-}
-.txt-dsl .ex-txt-rgt p{
-    font-size: 20px;
-    margin-bottom: 0rem;
-    }
-
-.txt-dsl .ex-txt-rgt h6{
-text-transform: uppercase;
-
-}
-
-.ex .ex-rgt{
-    width: 45%;
-    
-}
-.ex .ex-rgt .txt-dsl2{
-    width: 90%;
-    display: flex;
-    justify-content: space-evenly;
-    border-left: 6px solid sandybrown;
-    align-items: center;
- 
-   
-}
- .txt-dsl2 .ex-text-rgt h1{
-    font-size: 50px;
-    color: sandybrown;
-
-    
-}
-.txt-dsl2 .ex-text-lft p{
+.menu .menu-text h6{
     font-size: 25px;
-    margin-bottom: 0rem;
+    font-family:'Courier New', Courier, monospace ;
+    text-decoration: underline sandybrown;
+  text-underline-offset: 10px;
+  color: sandybrown;
+  text-align: center;
+  padding-bottom: 10px;
+}
+.menu .menu-text h1{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.menu .menu-list{
+    width: 95%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+   margin-top: 30px;
+   
+border-bottom: 2px solid grey;
+}
+.mn-list i{
+    color: sandybrown;
+    font-size: 50px;
+}
+.mn-list p{
+    margin-bottom: 0%;
+}
+
+.mn-list2 i{
+    color: sandybrown;
+    font-size: 50px;
+}
+.mn-list2 p{
+    margin-bottom: 0%;
+    
+}
+
+.mn-list3 i{
+    color: sandybrown;
+    font-size: 50px;
+}
+.mn-list3 p{
+    margin-bottom: 0%;
+   
+}
+
+.food{
+    width: 90%;
+    display: flex;
+    margin: 20px auto;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.food .food-lft{
+    width: 46%;
+    
 }
 
 
-
-.about-rgt .btn{
-width: 40%;
-padding: 20px;
-margin: 30px auto;
-font-size: 20px;
-background-color: sandybrown;
-border: 1px solid sandybrown;
-color: white;
+.food .food-lft .food-list{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 6%;
+    flex-wrap: wrap;
+   
 }
-.about-rgt .btn a{
-    color: whitesmoke;
+.food-lft .food-list .food-img{
+    width: 25%;
+   
+}
+.food-img img{
+    width: 70%;
+    border-radius: 10px;
+}
+.food-lft .food-list .food-text{
+    width: 75%;
+    
+}
+.food-text .burger{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid grey;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    flex-wrap: wrap;
+}
+.burger .bur-name{
+    width: 65%;
+}
+.burger .bur-name h6{
+    font-size: 22px;
+}
+.burger .bur-price{
+    width: 35%;
+    
+}
+.burger .bur-price h6{
+    color: sandybrown;
+    text-align: end;
+    font-size: 20px;
+    
+}
+.food .food-rgt{
+    width: 46%;
+    /* display: none; */
+}
+
+.food .food-rgt .food-list2{
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly;
+    margin-bottom: 6%;
+    flex-wrap: wrap;
+ 
+}
+.food-rgt .food-list2 .food2-img{
+    width: 25%;
+}
+.food2-img img{
+    width: 70%;
+    border-radius: 10px;
+}
+.food-rgt .food-list2 .food2-text{
+    width: 75%;
+    
+}
+.food2-text .burger2{
+    width: 90%;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid grey;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    flex-wrap: wrap;
+}
+.burger2 .bur-name2{
+    width: 65%;
+}
+.burger2 .bur-name2 h6{
+    font-size: 22px;
+}
+.burger2 .bur-price2{
+    width: 35%;
+    
+}
+.burger2 .bur-price2 h6{
+    color: sandybrown;
+    text-align: end;
+    font-size: 20px;
+    
 }
 
 @media screen and (max-width:780px){
-header{
-      flex-direction: column;
-      text-align: center;
 
-    }
-    .about{
+    .menu{
         width: 75%;
         text-align: center;
     }
-    footer{
-    flex-direction: column;
-    width: 90%;
-    align-items: center;
-    
-   }
-   footer nav{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .social-icon{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .tt{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-}
-@media screen and (max-width:560px){
-header{
-      flex-direction: column;
-      text-align: center;
-
-    }
-    .about{
-        width: 85%;
+    .menu .menu-text{
+        width: 100%;
         text-align: center;
     }
-
-    footer{
-    flex-direction: column;
-    width: 90%;
-    align-items: center;
+    .menu .menu-list{
+        width: 100%;
+            text-align: center;
+    }
+    .food{
+        width: 75%;
+        flex-direction: row;
+        align-items: center;
+    }
+    .food .food-lft{
+        width: 100%;
+    }
+    .food .food-lft img{
+        width: 80%;
+        height: 18vh;
+    }
+    .food .food-rgt{
+        width: 100%;
+         }
+    .food .food-rgt img{
+        width: 80%;
+height: 18vh;
+    }
     
-   }
-   footer nav{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .social-icon{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
-   footer .tt{
-    width: 100%;
-    text-align: center;
-    margin: 2% 0%;
-   }
+}
+@media screen and (max-width:560px){
+    .menu{
+        width: 75%;
+        text-align: center;
+    }
+    .menu .menu-text{
+        width: 100%;
+        text-align: center;
+    }
+    .menu .menu-list{
+        width: 100%;
+            text-align: center;
+    }
+    .food{
+        width: 75%;
+        flex-direction: row;
+        align-items: center;
+    }
+    .food .food-lft{
+        width: 100%;
+    }
+    .food .food-lft img{
+        width: 80%;
+        height: 18vh;
+    }
+    .food .food-rgt{
+        width: 100%;
+         }
+    .food .food-rgt img{
+        width: 80%;
+height: 18vh;
+    }
+
+    
 }
